2007-12-19 Benny Malengier <benny.malengier@gramps-project.org>
	* src/Editors/_EditPrimary.py:
	* src/Editors/_EditPlace.py:
	* src/Editors/_EditSecondary.py:
	* src/Editors/_EditSourceRef.py:
	* src/Editors/_EditReference.py:
	* src/Editors/_EditRepoRef.py:
	* src/Editors/_EditNote.py:
	* src/Editors/_EditMediaRef.py:
	* src/Editors/_EditEventRef.py:
	* src/Editors/_EditName.py:
	* src/DisplayTabs/__init__.py:
	* src/DisplayTabs/_GalleryTab.py:
	* src/DisplayTabs/_BackRefList.py:
	* src/DisplayTabs/_ButtonTab.py:
	* src/DisplayTabs/_GrampsTab.py:
	Accelator keys on displaytabs, convert _all_ tabs to GrampsTab! 
	Feature #955 #1438

2007-12-20  Raphael Ackermann <raphael.ackermann@gmail.com>
        * src/glade/gramps.glade : don't use C or O as accelerator keys on Name Editor, reserved for OK and Cancel buttons #1470
        * src/glade/edit_person.glade : accelerator keys are used double in person editor #1452

2007-12-20  Jerome Rapinat <romjerome@yahoo.fr>
        * src/Editors/_EditPerson.py : Unspecified gender dialog doesn't have mnemonics #1461

2007-12-20  Brian Matherly <brian@gramps-project.org>
	* src/ReportBase/_GraphvizReportDialog.py:
	* src/plugins/GraphViz.py:
	* src/plugins/GVHourGlass.py:
	* src/BaseDoc.py:
	Various enhancements to the Graphviz report system.
	* src/plugins/GVRelGraph.py: Added - adapted GraphViz.py to use Graphviz 
	report system.

2007-12-20  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/plugins/ExportVCard.py: fixed date.get_text() as signal for text
	* src/plugins/ExportVCalendar.py: fixed date.get_text() ditto
	* src/plugins/WriteGeneWeb.py: fixed date.get_text() ditto

2007-12-19  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/GrampsCfg.py: added a warning about duplicate pattern

2007-12-19 Peter Landgren <peter.talken@telai.com>
	* src/DbManager.py: fixed unique rename and new databases 
	* src/RecentFiles.py: fixed unique rename and new databases
			and update of recent-files.xml
