@@ -1,3 +1,6 @@
+2007-12-20 Benny Malengier <benny.malengier@gramps-project.org>
+	* src/plugins/rel_pt.py: RelLib -> gen.lib
+
 2007-12-19 Benny Malengier <benny.malengier@gramps-project.org>
 	* src/Editors/_EditPrimary.py:
 	* src/Editors/_EditPlace.py:
